Revert "名前や写真、文章の差し替え"

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Resume - Sakakibara Yuuki
+        title Resume - Start Bootstrap Theme
 
         link(rel='icon', type='image/x-icon', href='assets/img/favicon.ico')
 
@@ -27,7 +27,7 @@ html(lang='en')
         // Navigation
         nav#sideNav.navbar.navbar-expand-lg.navbar-dark.bg-primary.fixed-top
             a.navbar-brand.js-scroll-trigger(href='#page-top')
-                span.d-block.d-lg-none Sakakibara Yuuki
+                span.d-block.d-lg-none Clarence Taylor
                 span.d-none.d-lg-block
                     img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/profile.jpg', alt='...')
             button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
@@ -54,17 +54,17 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Sakakibara
-                        span.text-primary Yuuki
+                        | Clarence 
+                        span.text-primary Taylor
                     .subheading.mb-5
-                        | ='Tokorozawa-shi, Saitama-ken, Japan CO ***** · (080) ****-**** ·'
-                        a(href='mailto:sakakilabo0000@gmail.com') sakakilabo0000@gmail.com
+                        | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
+                        a(href='mailto:name@email.com') name@email.com
                     p.lead.mb-5
-                        | I have experience developing high-level software using machine learning. I provide solid solutions to companies through research and experimental designs.
+                        | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
                     .social-icons
                         a.social-icon(href='#!')
                             i.fab.fa-linkedin-in
-                        a.social-icon(href='https://github.com/sakakibara-yuuki')
+                        a.social-icon(href='#!')
                             i.fab.fa-github
                         a.social-icon(href='#!')
                             i.fab.fa-twitter
@@ -80,39 +80,39 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 JUNIOR MACHINE LEARNING ENGINEER
-                            .subheading.mb-3 XXX Systems
+                            h3.mb-0 Senior Web Developer
+                            .subheading.mb-3 Intelitec Solutions
                             p
                                 | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
                         .flex-shrink-0
-                            span.text-primary March 2022 - February 2024
+                            span.text-primary March 2013 - Present
 
-                    // .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
-                    //     .flex-grow-1
-                    //         h3.mb-0 Web Developer
-                    //         .subheading.mb-3 Intelitec Solutions
-                    //         p
-                    //             | Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-                    //     .flex-shrink-0
-                    //         span.text-primary December 2011 - March 2013
-                    //
-                    // .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
-                    //     .flex-grow-1
-                    //         h3.mb-0 Junior Web Designer
-                    //         .subheading.mb-3 Shout! Media Productions
-                    //         p
-                    //             | Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
-                    //     .flex-shrink-0
-                    //         span.text-primary July 2010 - December 2011
-                    //
-                    // .d-flex.flex-column.flex-md-row.justify-content-between
-                    //     .flex-grow-1
-                    //         h3.mb-0 Web Design Intern
-                    //         .subheading.mb-3 Shout! Media Productions
-                    //         p
-                    //             | Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
-                    //     .flex-shrink-0
-                    //         span.text-primary September 2008 - June 2010
+                    .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
+                        .flex-grow-1
+                            h3.mb-0 Web Developer
+                            .subheading.mb-3 Intelitec Solutions
+                            p
+                                | Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+                        .flex-shrink-0
+                            span.text-primary December 2011 - March 2013
+
+                    .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
+                        .flex-grow-1
+                            h3.mb-0 Junior Web Designer
+                            .subheading.mb-3 Shout! Media Productions
+                            p
+                                | Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
+                        .flex-shrink-0
+                            span.text-primary July 2010 - December 2011
+
+                    .d-flex.flex-column.flex-md-row.justify-content-between
+                        .flex-grow-1
+                            h3.mb-0 Web Design Intern
+                            .subheading.mb-3 Shout! Media Productions
+                            p
+                                | Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+                        .flex-shrink-0
+                            span.text-primary September 2008 - June 2010
 
             hr.m-0
 
@@ -123,11 +123,21 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Saitama University Graduate School of Science and Engineering
-                            .subheading.mb-3 Mathematics, Electronics and Informatics Division
-                            div Department of Information and Computer Sciences
+                            h3.mb-0 University of Colorado Boulder
+                            .subheading.mb-3 Bachelor of Science
+                            div Computer Science - Web Development Track
+                            p GPA: 3.23
                         .flex-shrink-0
-                            span.text-primary April 2016 - March 2022
+                            span.text-primary August 2006 - May 2010
+
+                    .d-flex.flex-column.flex-md-row.justify-content-between
+                        .flex-grow-1
+                            h3.mb-0 James Buchanan High School
+                            .subheading.mb-3 Technology Magnet Program
+                            p GPA: 3.56
+                        .flex-shrink-0
+                            span.text-primary August 2002 - May 2006
+
             hr.m-0
 
             // Skills
@@ -137,49 +147,48 @@ html(lang='en')
                     .subheading.mb-3 Programming Languages & Tools
                     ul.list-inline.dev-icons
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/python/#3776AB', alt='Python', height='60', width='60')
+                            i.fab.fa-html5
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/pytorch/#EE4C2C', alt='Pytorch', height='60', width='60')
+                            i.fab.fa-css3-alt
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/sphinx/#000000', alt='sphinx', height='60', width='60')
+                            i.fab.fa-js-square
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/C/#A8B9CC', alt='C', height='60', width='60')
+                            i.fab.fa-angular
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/cplusplus/#00599C', alt='Cplusepluse', height='60', width='60')
+                            i.fab.fa-react
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/javascript/#F7DF1E', alt='javascript', height='60', width='60')
+                            i.fab.fa-node-js
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/nodedotjs/#5FA04E', alt='nodejs', height='60', width='60')
+                            i.fab.fa-sass
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/svelte/#FF3E00', alt='svelte', height='60', width='60')
+                            i.fab.fa-less
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/html5/#E34F26', alt='html5', height='60', width='60')
+                            i.fab.fa-wordpress
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/css3/#1572B6', alt='css3', height='60', width='60')
+                            i.fab.fa-gulp
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/linux/#FCC624', alt='linux', height='60', width='60')
+                            i.fab.fa-grunt
                         li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/archlinux/#FCC624', alt='archlinux', height='60', width='60')
-                        li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/docker/#2496ED', alt='docker', height='60', width='60')
-                        li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/cisco/#1BA0D7', alt='cisco', height='60', width='60')
-                        li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/raspberrypi/#A22846', alt='raspberrypi', height='60', width='60')
-                        li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/vim/#019733', alt='vim', height='60', width='60')
-                        li.list-inline-item
-                            img(src='https://cdn.simpleicons.org/neovim/#57A143', alt='nvim', height='60', width='60')
-                    .subheading.mb-3 Special Skill
+                            i.fab.fa-npm
+                    .subheading.mb-3 Workflow
                     ul.fa-ul.mb-0
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Machine-learning, Deep-learning, Reinforcement-learning
+                            | Mobile-First, Responsive Design
                         li
                             span.fa-li
                                 i.fas.fa-check
-                            | Technology across multiple disciplines
+                            | Cross Browser Testing & Debugging
+                        li
+                            span.fa-li
+                                i.fas.fa-check
+                            | Cross Functional Teams
+                        li
+                            span.fa-li
+                                i.fas.fa-check
+                            | Agile Development & Scrum
+
             hr.m-0
 
             // Interests
@@ -187,24 +196,55 @@ html(lang='en')
                 .resume-section-content
                     h2.mb-5 Interests
                     p
-                        | I am knowledgeable about the field of machine learning, called reinforcement learning, and have previously worked on that technology. I am broadly interested in machine learning and its business applications, and have researched what technologies are used in Youtube, Netflix, Amazon, etc. I have a strong interest in machine learning and finance, and spend a lot of time reading papers on Fintech and implementing them.
+                        | Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.
                     p.mb-0
-                        | I have a strong interest in machine learning and finance and spend a lot of time reading and implementing papers on Fintech. I also like mathematics and read a lot, especially books on geometry.
+                        | When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.
+
             hr.m-0
 
             // Awards
             section#awards.resume-section
                 .resume-section-content
-                    h2.mb-5 Certifications
+                    h2.mb-5 Awards & Certifications
                     ul.fa-ul.mb-0
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | Fundamental Information Technology Engineer Examination
+                            | Google Analytics Certified Developer
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | JDLA Deep Learning for ENGINEER
+                            | Mobile Web Specialist - Google Certification
+                        li
+                            span.fa-li
+                                i.fas.fa-trophy.text-warning
+                            | 1
+                            sup st 
+                            | Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                        li
+                            span.fa-li
+                                i.fas.fa-trophy.text-warning
+                            | 1
+                            sup st 
+                            | Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                        li
+                            span.fa-li
+                                i.fas.fa-trophy.text-warning
+                            | 2
+                            sup nd 
+                            | Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                        li
+                            span.fa-li
+                                i.fas.fa-trophy.text-warning
+                            | 1
+                            sup st 
+                            | Place - James Buchanan High School - Hackathon 2006
+                        li
+                            span.fa-li
+                                i.fas.fa-trophy.text-warning
+                            | 3
+                            sup rd 
+                            | Place - James Buchanan High School - Hackathon 2005
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
