--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -83,37 +83,9 @@ html(lang='en')
                             h3.mb-0 JUNIOR MACHINE LEARNING ENGINEER
                             .subheading.mb-3 XXX Systems
                             p
-                                | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
+                                | I was in charge of creating a control program for a certain physical quantity in a factory using reinforcement learning. I also assisted in the creation of a 2D map from point cloud data and a program to identify crushed stone.
                         .flex-shrink-0
                             span.text-primary March 2022 - February 2024
-
-                    // .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
-                    //     .flex-grow-1
-                    //         h3.mb-0 Web Developer
-                    //         .subheading.mb-3 Intelitec Solutions
-                    //         p
-                    //             | Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-                    //     .flex-shrink-0
-                    //         span.text-primary December 2011 - March 2013
-                    //
-                    // .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
-                    //     .flex-grow-1
-                    //         h3.mb-0 Junior Web Designer
-                    //         .subheading.mb-3 Shout! Media Productions
-                    //         p
-                    //             | Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
-                    //     .flex-shrink-0
-                    //         span.text-primary July 2010 - December 2011
-                    //
-                    // .d-flex.flex-column.flex-md-row.justify-content-between
-                    //     .flex-grow-1
-                    //         h3.mb-0 Web Design Intern
-                    //         .subheading.mb-3 Shout! Media Productions
-                    //         p
-                    //             | Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
-                    //     .flex-shrink-0
-                    //         span.text-primary September 2008 - June 2010
-
             hr.m-0
 
             // Education
